# hypline

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  example.yaml  index.html  pyproject.toml  versions.json
.github/workflows/: cd.yml  ci.yml  docs.yml
0.3/: index.html  objects.inv
0.3/concepts/segments/: index.html
0.3/how-to/filter/: index.html
0.3/how-to/regenerate/: index.html
0.3/reference/confoundgen/: index.html
0.3/reference/denoise/: index.html
0.3/reference/transcribe/: index.html
0.3/search/: search_index.json
0.3/tutorials/walkthrough/: index.html
docs/: mkdocs.yml
docs/mkdocs/: index.md
docs/mkdocs/concepts/: feature-families.md  glossary.md  how-encoding-works.md  layout.md  reading-an-eval.md  segments.md
docs/mkdocs/guides/: clean.md
docs/mkdocs/how-to/: analyze-evals.md  filter.md  prepare-dataset.md  regenerate.md
docs/mkdocs/reference/: confoundgen.md  denoise.md  encoding-results.md  encoding.md  featuregen.md  python-api.md  transcribe.md
docs/mkdocs/stylesheets/: extra.css
docs/mkdocs/tutorials/: walkthrough.md
guides/clean/: index.html
next/: 404.html  index.html  objects.inv
next/concepts/feature-families/: index.html
next/concepts/glossary/: index.html
next/concepts/how-encoding-works/: index.html
next/concepts/layout/: index.html
next/concepts/reading-an-eval/: index.html
next/concepts/segments/: index.html
next/guides/clean/: index.html
next/how-to/analyze-evals/: index.html
next/search/: search_index.json
notes/: README.md
notes/decisions/: bidspath-validation.md  confound-files.md  dyad-keyed.md  feature-files.md  layout.md  nuisance-files.md  partition-entity.md  segment-metadata.md  semantic-entity.md  unsupported-entities.md
notes/modules/: bold.md  denoise.md  encoding.md  events.md  phonemic.md  semantic.md  spectral.md  syntactic.md  transcriber.md
search/: search_index.json
src/hypline/: __init__.py  _utils.py  _version.py  bids.py  bold.py  cache.py  cli.py  config.py  denoise.py  downsample.py  encoding.py  enums.py  events.py  fmriprep.py  io.py  layout.py  regression.py  schemas.py  spaces.py  transcribe.py  transcriber.py  utils.py
src/hypline/cli/: _utils.py  (+8 more)
tests/data/: confounds_timeseries.json
tests/unit/: conftest.py  test_bids.py  test_bold.py  test_denoise.py  test_downsample.py  test_encoding.py  test_events.py  test_feature_utils.py  test_fmriprep.py  test_io.py  test_layout.py  test_phonemic.py  test_utils.py
v0.2.3/: 404.html
v0.2.4/: index.html
(+57 files in other folders)
