[project]
name = "hypline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangyoon Park", email = "datumvitae@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dill>=0.3.9",
    "natsort>=8.4.0",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "typer>=0.15.2",
]

[project.scripts]
hypline = "hypline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
