[project]
name = "hypline"
version = "0.3.0a1"
description = "Data Cleaning and Analysis Pipeline for Hyperscanning Research"
readme = "README.md"
authors = [
    { name = "Sangyoon Park", email = "datumvitae@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "himalaya>=0.4.11",
    "joblib>=1.4.2",
    "loguru>=0.7.3",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "nltk>=3.9.3",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.0",
    "typer>=0.15.2",
    "whisperx>=3.8.4",
]

[project.urls]
Repository = "https://github.com/princeton-ddss/hypline"
Documentation = "https://princeton-ddss.github.io/hypline/latest/"

[project.scripts]
hypline = "hypline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
demo = [
    "marimo>=0.23.6",
]
dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]
docs = [
    "mike>=2.1.4",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.27.0",
]
lint = [
    "pre-commit>=4.2.0",
    "ty>=0.0.22",
]
test = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes rules
    "W",    # PyCodeStyle warnings
    "E",    # PyCodeStyle errors
    "I",    # Sort imports properly
]
